{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 90,
  "lineage": "417ae696-aaef-0602-927e-9079dd195abb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:vpc/vpc-085aae727fbfc39c5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ccd5b09c33bd60fb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c7d5af66fbc5da93",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085aae727fbfc39c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-014b1de9ad9b836da",
            "owner_id": "654654423131",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-0ef45486b57ad2651",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef45486b57ad2651",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b7223fd8832f7c1b"
              }
            ],
            "primary_network_interface_id": "eni-0b7223fd8832f7c1b",
            "private_dns": "ip-172-31-30-222.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.222",
            "public_dns": "ec2-34-207-235-41.compute-1.amazonaws.com",
            "public_ip": "34.207.235.41",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e8604b8ee325d47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20251210191223985200000005",
              "terraform-20251210200643153800000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4de963f213350de",
            "tags": {
              "Name": "Api"
            },
            "tags_all": {
              "Name": "Api"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01b5a5a39ff492bfe",
              "sg-0d6b9056b459c11c5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-0ef45486b57ad2651",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.Login",
            "aws_security_group.Api",
            "aws_security_group.Login",
            "aws_security_group.all",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-0fc6deb55e11bec8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc6deb55e11bec8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bec7c919fc2da589"
              }
            ],
            "primary_network_interface_id": "eni-0bec7c919fc2da589",
            "private_dns": "ip-172-31-23-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.46",
            "public_dns": "ec2-98-94-89-77.compute-1.amazonaws.com",
            "public_ip": "98.94.89.77",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b83d5db0035c67e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20251210191223985200000005",
              "terraform-20251210200542276100000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4de963f213350de",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f7bf2112ca4e720",
              "sg-0d6b9056b459c11c5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-0fc6deb55e11bec8d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion",
            "aws_security_group.all",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "FrontEnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-0e18639c69621b355",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e18639c69621b355",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02af90a3ef24db465"
              }
            ],
            "primary_network_interface_id": "eni-02af90a3ef24db465",
            "private_dns": "ip-172-31-23-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.135",
            "public_dns": "ec2-3-90-161-7.compute-1.amazonaws.com",
            "public_ip": "3.90.161.7",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02577e48d58f14609",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20251210191223985200000005",
              "terraform-20251210200542208500000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4de963f213350de",
            "tags": {
              "Name": "FrontEnd"
            },
            "tags_all": {
              "Name": "FrontEnd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01f531dc301e7b2aa",
              "sg-0d6b9056b459c11c5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-0e18639c69621b355",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.Api",
            "aws_instance.Login",
            "aws_security_group.Api",
            "aws_security_group.FrontEnd",
            "aws_security_group.Login",
            "aws_security_group.all",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Login",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-0053dcb00107490d7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0053dcb00107490d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fb10f562c6c4de86"
              }
            ],
            "primary_network_interface_id": "eni-0fb10f562c6c4de86",
            "private_dns": "ip-172-31-18-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.152",
            "public_dns": "ec2-54-157-232-239.compute-1.amazonaws.com",
            "public_ip": "54.157.232.239",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1b102dd990c995a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20251210191223985200000005",
              "terraform-20251210200643205400000004"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4de963f213350de",
            "tags": {
              "Name": "Login"
            },
            "tags_all": {
              "Name": "Login"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05e045f045564d7b7",
              "sg-0d6b9056b459c11c5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-0053dcb00107490d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Login",
            "aws_security_group.all",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-01b5a5a39ff492bfe",
            "description": "Allow Api Traffic",
            "egress": [],
            "id": "sg-01b5a5a39ff492bfe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f7bf2112ca4e720"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f531dc301e7b2aa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251210200643153800000003",
            "name_prefix": "terraform-",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Api"
            },
            "tags_all": {
              "Name": "Api"
            },
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-01b5a5a39ff492bfe",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-02f7bf2112ca4e720",
            "description": "Allow Bastion Traffic",
            "egress": [],
            "id": "sg-02f7bf2112ca4e720",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251210200542276100000002",
            "name_prefix": "terraform-",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-02f7bf2112ca4e720",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "FrontEnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-01f531dc301e7b2aa",
            "description": "Allow FrontEnd Traffic",
            "egress": [],
            "id": "sg-01f531dc301e7b2aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f7bf2112ca4e720"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251210200542208500000001",
            "name_prefix": "terraform-",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FrontEnd"
            },
            "tags_all": {
              "Name": "FrontEnd"
            },
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-01f531dc301e7b2aa",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Login",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-05e045f045564d7b7",
            "description": "Allow Login Traffic",
            "egress": [],
            "id": "sg-05e045f045564d7b7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f7bf2112ca4e720"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b5a5a39ff492bfe"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251210200643205400000004",
            "name_prefix": "terraform-",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Login"
            },
            "tags_all": {
              "Name": "Login"
            },
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-05e045f045564d7b7",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-0d6b9056b459c11c5",
            "description": "Allow All Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6b9056b459c11c5",
            "ingress": [],
            "name": "terraform-20251210191223985200000005",
            "name_prefix": "terraform-",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "All"
            },
            "tags_all": {
              "Name": "All"
            },
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-0d6b9056b459c11c5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-08db54a694faa3a1c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08db54a694faa3a1c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d6b9056b459c11c5",
            "security_group_rule_id": "sgr-08db54a694faa3a1c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-08db54a694faa3a1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0fca959175b576ae0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0fca959175b576ae0",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01f531dc301e7b2aa",
            "security_group_rule_id": "sgr-0fca959175b576ae0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0fca959175b576ae0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.FrontEnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_Api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0556c19a96b16d2bf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0556c19a96b16d2bf",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01f531dc301e7b2aa",
            "region": "us-east-1",
            "security_group_id": "sg-01b5a5a39ff492bfe",
            "security_group_rule_id": "sgr-0556c19a96b16d2bf",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0556c19a96b16d2bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Api",
            "aws_security_group.FrontEnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_Login",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-01b58cb58923c0c66",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-01b58cb58923c0c66",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01b5a5a39ff492bfe",
            "region": "us-east-1",
            "security_group_id": "sg-05e045f045564d7b7",
            "security_group_rule_id": "sgr-01b58cb58923c0c66",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-01b58cb58923c0c66",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Api",
            "aws_security_group.Login"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-06c1f6fe725311b87",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06c1f6fe725311b87",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02f7bf2112ca4e720",
            "security_group_rule_id": "sgr-06c1f6fe725311b87",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-06c1f6fe725311b87",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_Api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-058b115845551354e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-058b115845551354e",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02f7bf2112ca4e720",
            "region": "us-east-1",
            "security_group_id": "sg-01b5a5a39ff492bfe",
            "security_group_rule_id": "sgr-058b115845551354e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-058b115845551354e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Api",
            "aws_security_group.Bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_FrontEnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0e3dee33409a1c163",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e3dee33409a1c163",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02f7bf2112ca4e720",
            "region": "us-east-1",
            "security_group_id": "sg-01f531dc301e7b2aa",
            "security_group_rule_id": "sgr-0e3dee33409a1c163",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0e3dee33409a1c163",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion",
            "aws_security_group.FrontEnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_Login",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0176698c308ab5758",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0176698c308ab5758",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02f7bf2112ca4e720",
            "region": "us-east-1",
            "security_group_id": "sg-05e045f045564d7b7",
            "security_group_rule_id": "sgr-0176698c308ab5758",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0176698c308ab5758",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion",
            "aws_security_group.Login"
          ]
        }
      ]
    }
  ]
}